# mm-rag-playbook

./: README.md  docs.md  pyproject.toml
examples/: qa_demo.py  run_demo.py
src/mm_rag_playbook/: __init__.py  answering.py  config.py  pipeline.py  retrieval.py
tests/: test_retrieval.py
