[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-rag-playbook"
version = "0.1.0"
description = "Lightweight multimodal RAG patterns for PDF documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
